feat: about n resume

--- a/docs/about.mdx
+++ b/docs/about.mdx
@@ -5,7 +5,9 @@ title: About Me
 
 # About me
 
-> Introduction section
+### Introduction
+
+Hi, I'm Firdaus. I'm a Full-Stack Developer at [MHC Asia Group](https://mhcasia.com/). I graduated from [Institut Teknologi Sumatera](https://itera.ac.id) in 2023 with a Bachelor's degree in Informatics Engineering with GPA 3.78. Previously, I work  at [Upscalix](https://upscalix.com.au) as Mid-Senior Full-Stack Developer and currently working on SAAS at [busyhour.id](https://busyhour.id) in my free time.
 
 ### Socials
 
@@ -14,7 +16,8 @@ import Links from '@theme/Links/Links';
 <Links
   links={[
     'https://github.com/krsbx',
-    'https://krsbx.github.io/',
+    'https://linkedin.com/in/firdaus-sati',
+    'https://busyhour.id',
   ]}
 />
 
