feat: busyhour-lingozi in timeline

--- a/docs/timeline.mdx
+++ b/docs/timeline.mdx
@@ -12,6 +12,33 @@ import Timeline from '../src/theme/Timeline';
 <Timeline
   data={[
     {
+      title: 'Lingozi',
+      date: '2024',
+      body: (
+        <div>
+          <strong>Descriptions</strong>
+          <p>
+            <em>AI</em> integrated language learning platform where users can
+            learn any language and will face with a real day-to-day conversation
+            scenario. For each users input, <em>Lingozi</em> will provide an
+            example ands way to improve the users communications skills.
+          </p>
+          <strong>Contributions</strong>
+          <ul>
+            <li>Design and develop system architecture.</li>
+            <li>
+              Implement a <em>real-time</em> chat functionality.
+            </li>
+            <li>
+              Implement a <em>real-time</em> feedback system.
+            </li>
+          </ul>
+        </div>
+      ),
+      link: 'https://lingozi.com/',
+      linkTitle: 'LingoZi',
+    },
+    {
       title: 'Air Health',
       date: '2024',
       body: (
@@ -45,6 +72,35 @@ import Timeline from '../src/theme/Timeline';
       linkTitle: 'Air Health Lab',
     },
     {
+      title: 'BusyHour',
+      date: '2023',
+      body: (
+        <div>
+          <strong>Descriptions</strong>
+          <p>
+            A software-as-a-service platform that aim to provides the cheapest
+            <em>real-time</em> in-app chat messaging, activity feeds, and audio/video
+            call services.
+          </p>
+          <strong>Contributions</strong>
+          <ul>
+            <li>Design and develop system architecture.</li>
+            <li>
+              Develop backend with Node.Js and Busy Hour own framework (
+              <a href="https://github.com/busy-hour-studio/blaze">Blaze</a>).
+            </li>
+            <li>Develop the web app with Next.js.</li>
+            <li>Integrate account balance systems with Xendit.</li>
+            <li>Develop SDK for web app and mobile app.</li>
+          </ul>
+        </div>
+      ),
+      link: 'https://busyhour.id/',
+      linkTitle: 'BusyHour',
+      image: 'timeline/busyhour.png',
+      imageAlt: 'BusyHour',
+    },
+    {
       title: 'ConsultNote.ai',
       date: '2023',
       body: (
@@ -63,11 +119,11 @@ import Timeline from '../src/theme/Timeline';
           </p>
           <strong>Contributions</strong>
           <ul>
-            <li>Develop a microservices backend with Moleculer Js</li>
-            <li>Develop a web app with Next Js and Zustand</li>
-            <li>Develop real-time speech-to-text transcriptions</li>
-            <li>Integrate AI to generate automated consultation documents</li>
-            <li>Integrate subscriptions with Stripe</li>
+            <li>Develop a microservices backend with Moleculerjs.</li>
+            <li>Develop a web app with Next.js and Zustand.</li>
+            <li>Develop real-time speech-to-text transcriptions.</li>
+            <li>Integrate AI to generate automated consultation documents.</li>
+            <li>Integrate subscriptions with Stripe.</li>
           </ul>
         </div>
       ),
@@ -123,7 +179,7 @@ import Timeline from '../src/theme/Timeline';
           </p>
           <strong>Contributions</strong>
           <ul>
-            <li>Develop web app with Next.Js and Redux</li>
+            <li>Develop web app with Next.js and Redux.</li>
             <li>Implement adobe analytics.</li>
           </ul>
         </div>
@@ -140,7 +196,7 @@ import Timeline from '../src/theme/Timeline';
           <p>Pool inspections booking and management system.</p>
           <strong>Contributions</strong>
           <ul>
-            <li>Develop admin panel with Next Js and Redux.</li>
+            <li>Develop admin panel with Next.js and Redux.</li>
             <li>Develop backend with Node.Js and Express.</li>
             <li>Implement job booking systems by map selections.</li>
           </ul>
@@ -163,7 +219,7 @@ import Timeline from '../src/theme/Timeline';
           </p>
           <strong>Contributions</strong>
           <ul>
-            <li>Develop admin panel with Next Js and Redux.</li>
+            <li>Develop admin panel with Next.js and Redux.</li>
             <li>Develop backend with Node.Js and Express.</li>
             <li>Develop mobile app with React Native and Redux.</li>
             <li>
